Added some packages, install dependecies, and generate scaffolded database with entity Framework

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SchoolManagementDbConnection": "Server=localhost, 1433;Database=SchoolManagementDb;Trusted_Connection=false;MultipleActiveResultSets=true;Encrypt=false;user id=sa;password=Blizzard2604*"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
